// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproMailTile > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-mail-tile
    w-100
  "
  id="required-unique-id-container"
>
  <div class="
    amelipro-mail-tile__editable
    d-flex
    w-100
  ">
    <button
      aria-label="Message lu"
      aria-pressed="false"
      class="
        mail-status-btn
        mail-status-btn--not-read
      "
      id="required-unique-id-read-btn"
      style="background-color: #E6F6FC;"
      title="Message non lu"
    ></button>
    <v-btn-stub
      block="false"
      border="false"
      class="
        d-block
        mail-btn--editable
        text-none
      "
      color="ap-blue-lighten-3"
      density="default"
      disabled="false"
      elevation="0"
      exact="false"
      flat="true"
      href="#modified"
      icon="false"
      id="required-unique-id-mail-btn"
      loading="false"
      replace="false"
      ripple="false"
      size="default"
      slim="false"
      stacked="false"
      symbol="Symbol(vuetify:v-btn-toggle)"
      tag="button"
      tile="false"
      variant="flat"
    ></v-btn-stub>
  </div>
</div>
`;

exports[`AmeliproMailTile > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-mail-tile
    w-100
  "
  id="required-unique-id-container"
>
  <v-btn-stub
    block="false"
    border="false"
    class="
      amelipro-mail-tile__not-editable
      mail-btn
      text-none
      w-100
    "
    color="ap-white"
    density="default"
    disabled="false"
    elevation="0"
    exact="false"
    flat="true"
    href="#required"
    icon="false"
    id="required-unique-id-mail-btn"
    loading="false"
    replace="false"
    ripple="false"
    size="default"
    slim="false"
    stacked="false"
    symbol="Symbol(vuetify:v-btn-toggle)"
    tag="button"
    tile="false"
    title="Message lu"
    variant="flat"
  ></v-btn-stub>
</div>
`;

exports[`AmeliproMailTile > render correctly 1`] = `
<div
  class="
    amelipro-mail-tile
    w-100
  "
  id="my-mail-tile-id-container"
>
  <button
    class="
      amelipro-mail-tile__not-editable
      bg-ap-blue-lighten-3
      elevation-0
      mail-btn
      mail-btn--not-read
      text-none
      v-btn
      v-btn--density-default
      v-btn--flat
      v-btn--size-default
      v-btn--variant-flat
      v-theme--light
      w-100
    "
    id="my-mail-tile-id-mail-btn"
    title="Message non lu"
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        d-flex
        mail-btn__content
        w-100
      ">
        <span class="
          d-flex
          flex-column
          flex-sm-row
          w-100
        ">
          <span class="
            d-block
            mail-info__text
            text-left
          ">
            <span
              class="
                d-block
                text-h5
              "
              id="my-mail-tile-id-mail-object"
            >
              objet du mail
              <span class="d-sr-only">
                &nbsp;[Commentaires disponibles]
              </span>
            </span>
            <span
              class="
                d-block
                mt-2
              "
              id="my-mail-tile-id-message-first-line"
            >
              ligne 1
            </span>
            <span
              class="
                d-block
                mt-2
              "
              id="my-mail-tile-id-message-second-line"
            >
              ligne 2
            </span>
            <span
              class="
                d-block
                mt-2
              "
              id="my-mail-tile-id-message-third-line"
            >
              ligne 3
            </span>
          </span>
          <span class="
            align-self-sm-center
            d-block
            mail-info__date
          ">
            <span
              class="d-block"
              id="my-mail-tile-id-message-date"
            >
              date
              <br />
              <span
                class="
                  d-block
                  mt-2
                "
                id="my-mail-tile-id-message-hour"
              >
                heure
              </span>
            </span>
          </span>
        </span>
      </span>
      <span
        class="
          amelipro-icon
          mail-info__comment-icon
        "
        id="my-mail-tile-id-icon-comment"
      >
        <span
          aria-hidden="true"
          class="
            amelipro-custom-icon
            custom-color
          "
          focusable="false"
          role="img"
          style="color: #D00063; height: 1rem; width: 1rem;"
        >
          <span>
            <svg
              aria-hidden="true"
              style="enable-background:new 0 0 42 42;"
              version="1.1"
              viewBox="0 0 42 42"
              x="0px"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
              y="0px"
            >
              <polygon
                class="shape-color"
                points="21,2.8 0,39.2 42,39.2 "
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
    <!---->
    <!---->
  </button>
</div>
`;
